# agent-beacon

./: .gitignore  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md
docs/: architecture.md  bringup.md  hardware-diff.md  notify.md  security.md  test-report.md  token-rate-api.md  ui-spec.md  ui.md  usb-transport.md  weather.md
firmware/: CMakeLists.txt  config.example.h  partitions.csv  sdkconfig.defaults
firmware/components/beacon_fonts/: CMakeLists.txt  beacon_fonts.c
firmware/components/beacon_fonts/font_assets/: README.md
firmware/components/beacon_fonts/include/: beacon_fonts.h
firmware/components/beacon_network/: CMakeLists.txt  beacon_network.c  beacon_network_frame.c  beacon_network_policy.c  idf_component.yml
firmware/components/beacon_network/include/: beacon_network.h  beacon_network_frame.h
firmware/main/: CMakeLists.txt  app_main.c  idf_component.yml
firmware/test/: test_board_geometry.c  test_calibration.c  test_diagnostics.c  test_input.c  test_network_frame.c  test_network_policy.c  test_notifications.c  test_protocol.c  test_protocol_json.c  test_ui_model.c  test_ui_state.c  test_usb_frame.c
macos/: go.mod  go.sum
macos/configs/: config.example.yaml
macos/launchd/: com.stepatero.agentbeacon.plist.template
patches/codex-token-rate-rust-v0.144.4/: 0001-feat-token-rate-track-speed-through-tool-calls.patch  (+7 more)
protocol/: PROTOCOL.md
scripts/: backup-factory.sh  configure-network.sh  detect-device.sh  doctor.sh  emit-demo-events.sh  flash-firmware.sh  install-local-fonts.sh  monitor.sh  restore-factory.sh  update-patched-codex.sh
(+121 files in other folders)
